# stock_trader

./: .cookiecutter.json  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  SECURITY.rst  noxfile.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/stock_trader/: Quote.py  __init__.py  __main__.py  broker_protocols.py
tests/: __init__.py  test_main.py
