[tool.poetry]
name = "stock_trader"
version = "0.0.4"
description = "Stock Trader"
authors = ["Eric Evans <ciresnave@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/ciresnave/stock_trader"
repository = "https://github.com/ciresnave/stock_trader"
documentation = "https://stock_trader.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/ciresnave/stock_trader/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
typer = "^0.3.2"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
colorama = { version = "^0.4.4", optional = true }
shellingham = { version = "^1.4.0", optional = true }

[tool.poetry.extras]
colorama = ["colorama"]
shellingham = ["shellingham"]
all = ["colorama", "shellingham"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.902"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
sphinx-click = "^3.0.1"
Pygments = "^2.9.0"
pytest-mock = "^3.6.1"
nox = "^2021.6.12"
nox-poetry = "^0.8.6"
pylint = "^2.9.3"
tomlkit = "^0.7.2"

[tool.poetry.scripts]
stock_trader = "stock_trader.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["stock_trader"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
